# koffer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/koffer/: __init__.py  cli.py  crypto.py  storage.py  utils.py
tests/: conftest.py  test_basic.py  test_cli_smoke.py  test_commands.py  test_crypto.py  test_storage.py  test_utils.py
