[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koffer"
version = "0.0.1"
description = "A Python package placeholder"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "jsnel", email = "jsnel@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/jsnel/koffer"
Repository = "https://github.com/jsnel/koffer"
Issues = "https://github.com/jsnel/koffer/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
