[project]
name = "koffer"
dynamic = ["version"]
description = "Secure API key and token koffer with session-based unlock"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "koffer contributors" },
]
keywords = ["api-keys", "secrets", "koffer", "encryption", "security", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
    "keyring>=25.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.2.0",
    "ruff>=0.14.0",
]

[project.urls]
Repository = "https://github.com/jsnel/koffer"

[project.scripts]
koffer = "koffer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/koffer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/koffer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/koffer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 99

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=3.2.0",
    "ruff>=0.14.0",
]
